very broken grappling orb implementation

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: Crystalised_Essentials
-version: '0.0.1'
+version: 0.0.1
 main: gg.crystalized.essentials.crystalized_essentials
 api-version: '1.21'
